[package]
name = "ipm-repo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
form_urlencoded = "1.2.1"
hex-literal = "1.0.0"
ipak = { version = "1.0.0", git = "https://github.com/The-Infinitys/ipm.ipak.git" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
sha2 = "0.10.9"
thiserror = "2.0.12"
toml = "0.9.2"
url = "2.5.4"
url-parse = "1.0.10"
